@@ -2316,6 +2316,7 @@ void    closure_evalvoid(GEN C);
 GEN     closure_trapgen(GEN C, long numerr);
 GEN     copybin_unlink(GEN C);
 GEN     get_lex(long vn);
+long    get_localprec(void);
 GEN     gp_call(void *E, GEN x);
 long    gp_callbool(void *E, GEN x);
 long    gp_callvoid(void *E, GEN x);
@@ -2323,13 +2324,16 @@ GEN     gp_eval(void *E, GEN x);
 long    gp_evalbool(void *E, GEN x);
 GEN     gp_evalupto(void *E, GEN x);
 long    gp_evalvoid(void *E, GEN x);
+void    localprec(long p);
 long    loop_break(void);
 GEN     next0(long n);
 GEN     pareval(GEN C);
 GEN     parsum(GEN a, GEN b, GEN code, GEN x);
 GEN     parvector(long n, GEN code);
 void    pop_lex(long n);
+void    pop_localprec(void);
 void    push_lex(GEN a, GEN C);
+void    push_localprec(long p);
 GEN     return0(GEN x);
 void    set_lex(long vn, GEN x);
 
