@@ -7,6 +7,7 @@ x + (1 + O(3^3))
 Mod(1 + O(3^3), (1 + O(3^3))*x)
 [1 + O(3^3), 2]
 77
+57
 38
 1
 1
@@ -19,4 +20,4 @@ Mod(1 + O(3^3), (1 + O(3^3))*x)
 3
 3
 4
-Total time spent: 8
+Total time spent: 0
